--- a/card/src/components/FriendCard/FriendCard.css
+++ b/card/src/components/FriendCard/FriendCard.css
@@ -9,7 +9,7 @@
   text-align: left;
 }
 
-.card > .img-container {
+.card > .imageContainer {
   height: 60%;
   overflow: hidden;
   text-align: center;
