--- a/card/src/components/FriendCard/FriendCard.css
+++ b/card/src/components/FriendCard/FriendCard.css
@@ -15,8 +15,9 @@
   text-align: center;
   background: #6caddc;
 }
-.card > .img-container > img {
+.card > .imageContainer > img {
   width: 60%;
+  margin-top: 5%;
 }
 
 .card > .content {
